--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="E:/WorkStation/java/M2MCloud_V1.1/morphia-1.1.0.jar"/>
-	<classpathentry kind="lib" path="E:/WorkStation/java/M2MCloud_V1.1/mongo-java-driver-3.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/Java/M2MCloud_V1.1/morphia-1.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/WorkSpace/Java/M2MCloud_V1.1/mongo-java-driver-3.2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
